[package]
name = "rustycli"
version = "0.1.0"
edition = "2021"
authors = [ "PwnWriter < hey@pwnwriter.xyz >" ]
description = "Run rust code using Rust Playground in your terminal."
readme = "README.md"
repository = "https://github.com/pwnwriter/rustycli"
homepage = "https://github.com/pwnwriter/rustycli.git"
license = "MIT"
keywords = ["screenshots", "bug-bounty", "recon", "pwn", "OSINT" ]
categories = ["accessibility", "web-programming", "command-line" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }


[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
