[package]
name = "rustycli"
version = "0.1.2"
edition = "2021"
authors = [ "PwnWriter < hey@pwnwriter.xyz >" ]
description = "🦊 Access the rust playground right in terminal."
readme = "README.md"
repository = "https://github.com/pwnwriter/rustycli"
homepage = "https://github.com/pwnwriter/rustycli.git"
license = "MIT"
keywords = ["Playground", "rustycli", "rust-lang"]
categories = ["accessibility", "web-programming", "command-line" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
spinoff = { version = "0.8", features = ["dots", "arc", "line"] }
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.29.1", features = ["full"] }  
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
